--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,5 @@
-@import "./assets/scss/style.scss";
 @import "./assets/scss/variable.scss";
+@import "./assets/scss/style.scss";
+@import "./assets/scss/header.scss";
 @import "./assets/scss/home.scss";
+@import "./assets/scss/footer.scss";
